# niwidgets

./: .flake8  .gitignore  .readthedocs.yml  .travis.yml  Interactive Surface Visualization Demo.ipynb  LICENSE.md  Makefile  README.md  api.html  check_updates.ipynb  demo_update.ipynb  doc-requirements.txt  environment.yml  examples.html  figure_handle_update_test.ipynb  genindex.html  index.html  index.ipynb  installation.html  niwidgets-testscript.py  niwidgets.py  objects.inv  old-requirements.txt  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  visualisation_wrapper.html  visualisation_wrapper.ipynb  visualisation_wrapper_new.ipynb
.ipynb_checkpoints/: Interactive Surface Visualization Demo-checkpoint.ipynb  report-checkpoint.ipynb  visualisation_wrapper-checkpoint.ipynb  visualisation_wrapper_new-checkpoint.ipynb
_modules/: index.html
_modules/niwidgets/: niwidget.html  niwidget_surface.html  niwidget_volume.html  streamlines.html
_sources/: api.rst.txt  index.rst.txt  visualisation_wrapper.ipynb.txt
_static/: bootstrap-sphinx.css
api/: niwidgets.NiftiWidget.html  niwidgets.StreamlineWidget.html  niwidgets.SurfaceWidget.html
doc/: api.rst  conf.py  examples.ipynb  index.rst  installation.rst
docs/: Makefile  conf.py  index.md  requirements.txt
niwidgets/: Interactive Surface Visualization Demo.ipynb  __init__.py  ciftitools.py  colormaps.py  controls.py  exampledata.py  niwidget.py  niwidget_surface.py  niwidget_volume.py  streamlines.py  version.py
tests/: conftest.py  test_surface.py  test_volume.py
(+20 files in other folders)
