[tool.poetry]
name = "niwidgets"
version = "0.2.2"
description = "'Interactive jupyter widgets for neuroimaging.'"
authors = ["Jan Freyberg <jan.freyberg@gmail.com>", "Bjoern Soergel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.5"
ipywidgets = "^7.4"
nibabel = "^2.4"
ipyvolume = "^0.5.1"
matplotlib = "^3.0"
numpy = "^1.16"
scipy = "^1.2"
nilearn = "^0.5.2"
scikit-learn = "^0.20.3"

[tool.poetry.dev-dependencies]
jupyterlab = "^0.35.4"
pytest = "^4.4"
sphinx = "^2.0"
nbsphinx = "^0.4.2"
jupyter_sphinx = "^0.1.4"
m2r = "^0.2.1"
pytest-cov = "^2.6"
coveralls = "^1.7"
sphinx_rtd_theme = "^0.4.3"

[tool.black]
line-length = 79
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

